variables.RunFour.scala.error
Erreur de compilation :
RunFour:4: error: '(' expected but identifier found.
  if isOverBaggle() == true {
     ^RunFour:7: error: illegal start of simple expression
} 
^