variables.RunFour.scala.code
var nbBaggle: Int = 0
while (nbBaggle < 4) {
  forward()
  if isOverBaggle() == true {
    nbBaggle = nbBaggle + 1;
  }
}